# Analyze_Legacy_Trading_Engine

./: .gitignore  CMakeLists.txt  DEPENDENCIES_ANALYSIS.md  GITHUB_SETUP.md  LICENSE  Makefile  PUBLICATION_SUCCESS.md  README.md  README_ENGINEERING.md  build.ps1  cleanup_project.bat  fixed_specific_changes.patch  git_commit_transfer_guide.md  minimal_ordermap_test.cpp  publish_to_github.bat  run_all_tests.bat  run_demo.bat  smart_pointer_test.cpp  test_no_macros.cpp  test_order_constructor.cpp  test_order_with_fixed.cpp  test_results.bat  test_smart_pointers.cpp
cmake/: orderbookConfig.cmake.in
demo/: CMakeLists.txt  comprehensive_demo.cpp  simple_demo.cpp  trading_demo.cpp
docs/: ANALYSIS.md  API.md  BUILD.md  PERFORMANCE.md  PROJECT_STRUCTURE.md  SMART_POINTER_MIGRATION.md  TEST_ANALYSIS_REPORT.md
examples/: debug_fixed.cpp  debug_fixed2.cpp  ordermap_test_simple.cpp
fixed_patches/: 0001-feat-restore-all-9-tests-and-complete-Fixed-class-re.patch
include/core/: bookmap.h  exchange.h  order.h  orderbook.h  orderlist.h  ordermap.h  pricelevels.h  test.h
include/safety/: production_safety.h  production_safety_inline.h
src/: exchange.cpp  orderbook.cpp  production_safety.cpp  production_safety_inline.cpp  production_safety_inline.h
test_smart_pointer/: CMakeLists.txt  simple_test.cpp  smart_pointer_test.cpp
test_smart_pointer/test_msvc/: build.ninja
tests/benchmark/: benchmark_multithread_test.cpp  benchmark_test.cpp
tests/unit/: bookmap_test.cpp  exchange_test.cpp  order_test.cpp  orderbook_test.cpp  orderlist_test.cpp  ordermap_test.cpp  spinlock_test.cpp
